--- a/juegos.html
+++ b/juegos.html
@@ -7,48 +7,74 @@
     <link rel="stylesheet" href="estilos.css">
 </head>
 
+<header>
+    <nav class="menu">
+        <a href="index.html">Inicio</a>
+        <a href="consolas.html">Consolas</a>
+        <a href="franquicias.html">Franquicias</a>
+        <a href="nosotros.html">Sobre nosotros</a>
+    </nav>
+
+</header>
+
+
+
 <body>
+    <div class="contenedor">
+        <main>
+            <h1 class="textoTitulo">Juegos de Nintendo</h1>
 
-        <nav class="menu">
-            <a href="index.html">Inicio</a>
-            <a href="consolas.html">Consolas</a>
-            <a href="franquicias.html">Franquicias</a>
-            <a href="nosotros.html">Sobre nosotros</a>
-        </nav>
+            <div class="contJC">
 
-    <main>
-        <h1>Juegos de Nintendo</h1>
-        <div>
-            <img src="https://www.nintendo.com/eu/media/images/assets/nintendo_switch_2_games/kirby_air_riders/16x9_NSwitch2_KirbyAirRiders_02_image1600w.jpg" alt="Portada de Kirby Air Riders" class="imagen">
-            <h3 class="parrafoJuego">Nintendo Switch 2 </h3>
-            <h2>Kirby Air Riders</h2>
-        </div>
+                <div>
+                    <img src="https://www.nintendo.com/eu/media/images/assets/nintendo_switch_2_games/kirby_air_riders/16x9_NSwitch2_KirbyAirRiders_02_image1600w.jpg" alt="Portada de Kirby Air Riders" class="imagen">
+                    <div class="textoJC">
+                        <h3>Nintendo Switch 2 </h3>
+                        <h2>Kirby Air Riders</h2>
+                    </div>
+                </div>
 
-        <div>
-            <img src="https://assets-prd.ignimgs.com/2022/09/14/zelda-tears-of-the-kingdom-button-2k-1663127818777.jpg" alt="Portada de The Legend of Zelda" class="imagen">
-            <h3 class="parrafoJuego">Nintendo Switch 2</h3>
-            <h2>The Legend of Zelda: Tears of the Kingdom</h2>
-        </div>
 
-        <div>
-            <img src="https://assets.nintendo.eu/image/upload/f_auto,c_limit,w_992,q_auto:low/MNS/NOE/70010000027620/1.1_2000x2000_ProductTile_Switch_AnimalCrossingNewHorizons_KeyVisual_enGB_v1_100q" alt="Portada de Animal Crossing: New Horizons" class="imagen"">
-            <h3 class="parrafoJuego">Nintendo Switch</h3>
-            <h2>Animal Crossing: New Horizons</h2>
-        </div>
+                <div>
+                    <img src="https://assets-prd.ignimgs.com/2022/09/14/zelda-tears-of-the-kingdom-button-2k-1663127818777.jpg" alt="Portada de The Legend of Zelda" class="imagen">
+                    <div class="textoJC">
+                        <h3>Nintendo Switch 2</h3>
+                        <h2>The Legend of Zelda: Tears of the Kingdom</h2>
+                    </div>
+                </div>
 
-        <div>
-            <img src="https://assets.nintendo.eu/image/upload/f_auto,c_limit,w_992,q_auto:low/MNS/NOE/70010000014063/SQ_NSwitch_SuperMarioParty" alt="Portada de Air Riders" alt="Portada de Super Mario Party™" class="imagen">
-            <h3 class="parrafoJuego">Nintendo Switch</h3>
-            <h2>Super Mario Party™</h2>
-        </div>
 
-    </main>
+                <div>
+                    <img src="https://assets.nintendo.eu/image/upload/f_auto,c_limit,w_992,q_auto:low/MNS/NOE/70010000027620/1.1_2000x2000_ProductTile_Switch_AnimalCrossingNewHorizons_KeyVisual_enGB_v1_100q" alt="Portada de Animal Crossing: New Horizons" class="imagen"">
+                    <div class="textoJC">
+                        <h3>Nintendo Switch</h3>
+                        <h2>Animal Crossing: New Horizons</h2>
+                    </div>
+                </div>
 
-    <footer>
-        <div class="footer">
-            <p>© Abril Merched 2025</p>
-        </div>
-    </footer>
+
+                <div>
+                    <img src="https://assets.nintendo.eu/image/upload/f_auto,c_limit,w_992,q_auto:low/MNS/NOE/70010000014063/SQ_NSwitch_SuperMarioParty" alt="Portada de Air Riders" alt="Portada de Super Mario Party™" class="imagen">
+                    <div class="textoJC">
+                        <h3>Nintendo Switch</h3>
+                        <h2>Super Mario Party™</h2>
+                    </div>
+                </div>
+            </div>
+
+        </main>
+
+        <footer>
+            <div class="footer">
+                <p>© Abril Merched 2025</p>
+            </div>
+        </footer>
+
+    </div>
+
+
+
+
     
 </body>
 </html>
