Contenedores en todas las paginas. Arreglos esteticos

--- a/nosotros.html
+++ b/nosotros.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Nintendo - Nosotros</title>
     <link rel="stylesheet" href="estilos.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 </head>
 
 <body>
@@ -16,24 +17,28 @@
             <a href="franquicias.html">Franquicias</a>
         </nav>
 
+
+    <div class="contenedor">
     <main>
 
-        <h1>Sobre nosotros</h1>
-        <h1>Nintendo</h1>
+            <h1 class="textoTitulo">Sobre nosotros</h1>
 
-        <div>
-            <h2>En Nintendo vivimos para crear mundos mágicos, aventuras inolvidables y personajes que te acompañan de por vida. Somos los que soñamos con castillos, héroes, criaturas únicas y batallas llenas de emoción. Nos apasiona divertir, sorprender y unir a generaciones enteras a través del juego. Desde nuestra sede en Kyoto imaginamos cada consola y cada historia con la misma pasión con la que jugamos de chicos, porque creemos que la diversión no tiene edad ni fronteras.</h2>
-            <img src="https://cdn.shopify.com/s/files/1/1288/8361/files/nintendo_banner.png?v=1486749975" alt="Nintendo y distintos personajes">
-        </div>
+            <div>
+                <h2 class="textoNos">En Nintendo vivimos para crear mundos mágicos, aventuras inolvidables y personajes que te acompañan de por vida. Somos los que soñamos con castillos, héroes, criaturas únicas y batallas llenas de emoción. Nos apasiona divertir, sorprender y unir a generaciones enteras a través del juego. Desde nuestra sede en Kyoto imaginamos cada consola y cada historia con la misma pasión con la que jugamos de chicos, porque creemos que la diversión no tiene edad ni fronteras.</h2>
+                <img class="imgNos" src="https://cdn.shopify.com/s/files/1/1288/8361/files/nintendo_banner.png?v=1486749975" alt="Nintendo y distintos personajes">
+            </div>
     </main>
-
-    <footer>
-        <div class="footer">
-            <a id="botonNosotros" href="https://www.nintendo.com/es-ar/" target="_blank">Página oficial de Nintendo </a>
-            <a id="botonNosotros" href="https://www.instagram.com/nintendolatam/" target="_blank" >Instagram de Nintendo</a>
-            <p>© Abril Merched 2025</p>
-        </div>
-    </footer>
+    </div>
     
+    <div class="contenedor">
+        <footer>
+            <div class="footer">
+                <p>© Abril Merched 2025</p>
+                <a id="botonNosotros" href="https://www.nintendo.com/es-ar/" target="_blank">Página oficial de Nintendo </a>
+                <a id="botonNosotros" href="https://www.instagram.com/nintendolatam/" target="_blank" >Instagram de Nintendo</a>
+            </div>
+        </footer>
+    </div>
+
 </body>
 </html>
