--- a/juegos.html
+++ b/juegos.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Nintendo - Juegos</title>
     <link rel="stylesheet" href="estilos.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 </head>
 
 <header>
@@ -26,7 +27,7 @@
 
             <div class="contJC">
 
-                <div>
+                <div class="contIndividual">
                     <img src="https://www.nintendo.com/eu/media/images/assets/nintendo_switch_2_games/kirby_air_riders/16x9_NSwitch2_KirbyAirRiders_02_image1600w.jpg" alt="Portada de Kirby Air Riders" class="imagen">
                     <div class="textoJC">
                         <h3>Nintendo Switch 2 </h3>
@@ -35,7 +36,7 @@
                 </div>
 
 
-                <div>
+                <div class="contIndividual">
                     <img src="https://assets-prd.ignimgs.com/2022/09/14/zelda-tears-of-the-kingdom-button-2k-1663127818777.jpg" alt="Portada de The Legend of Zelda" class="imagen">
                     <div class="textoJC">
                         <h3>Nintendo Switch 2</h3>
@@ -44,7 +45,7 @@
                 </div>
 
 
-                <div>
+                <div class="contIndividual">
                     <img src="https://assets.nintendo.eu/image/upload/f_auto,c_limit,w_992,q_auto:low/MNS/NOE/70010000027620/1.1_2000x2000_ProductTile_Switch_AnimalCrossingNewHorizons_KeyVisual_enGB_v1_100q" alt="Portada de Animal Crossing: New Horizons" class="imagen"">
                     <div class="textoJC">
                         <h3>Nintendo Switch</h3>
@@ -53,7 +54,7 @@
                 </div>
 
 
-                <div>
+                <div class="contIndividual">
                     <img src="https://assets.nintendo.eu/image/upload/f_auto,c_limit,w_992,q_auto:low/MNS/NOE/70010000014063/SQ_NSwitch_SuperMarioParty" alt="Portada de Air Riders" alt="Portada de Super Mario Party™" class="imagen">
                     <div class="textoJC">
                         <h3>Nintendo Switch</h3>
@@ -61,20 +62,17 @@
                     </div>
                 </div>
             </div>
-
         </main>
+    </div>
 
+    <div class="contenedor">
         <footer>
             <div class="footer">
                 <p>© Abril Merched 2025</p>
             </div>
         </footer>
-
     </div>
 
-
-
-
-    
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 </body>
 </html>
