Navbar fija en la parte superior

--- a/franquicias.html
+++ b/franquicias.html
@@ -11,14 +11,20 @@
 
 <body>
 
-    <nav></nav>
-
-        <nav class="menu">
-            <a href="index.html">Inicio</a>
-            <a href="juegos.html">Juegos</a>
-            <a href="consolas.html">Consolas</a>
-            <a href="nosotros.html">Sobre nosotros</a>
+    <header>
+        <nav class="menu navbar fixed-top">
+            <div>
+                <h1>Nintendo</h1>
+            </div>
+            <div>
+                <a href="index.html">Inicio</a></li>
+                <a href="juegos.html">Juegos</a></li>
+                <a href="consolas.html">Consolas</a></li>
+                <a href="franquicias.html">Franquicias</a></li>
+                <a href="nosotros.html">Sobre Nosotros</a></li>
+            </div>
         </nav>
+    </header>
 
     <main>
 
