--- a/index.html
+++ b/index.html
@@ -9,13 +9,20 @@
 </head>
 
 <body>
-
-    <NAV class="menu">
-        <a href="juegos.html">Juegos</a>
-        <a href="consolas.html">Consolas</a>
-        <a href="franquicias.html">Franquicias</a>
-        <a href="nosotros.html">Sobre nosotros</a>
-    </NAV>
+    <header>
+        <nav class="menu navbar fixed-top">
+            <div>
+                <h1>Nintendo</h1>
+            </div>
+            <div>
+                <a href="index.html">Inicio</a></li>
+                <a href="juegos.html">Juegos</a></li>
+                <a href="consolas.html">Consolas</a></li>
+                <a href="franquicias.html">Franquicias</a></li>
+                <a href="nosotros.html">Sobre Nosotros</a></li>
+            </div>
+        </nav>
+    </header>
 
     <div class="contenedor">
         <main>
@@ -41,6 +48,6 @@
         </footer>
 
     </div>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 </body>
 </html>
