--- a/juegos.html
+++ b/juegos.html
@@ -8,15 +8,20 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 </head>
 
-<header>
-    <nav class="menu">
-        <a href="index.html">Inicio</a>
-        <a href="consolas.html">Consolas</a>
-        <a href="franquicias.html">Franquicias</a>
-        <a href="nosotros.html">Sobre nosotros</a>
-    </nav>
-
-</header>
+    <header>
+        <nav class="menu navbar fixed-top">
+            <div>
+                <h1>Nintendo</h1>
+            </div>
+            <div>
+                <a href="index.html">Inicio</a></li>
+                <a href="juegos.html">Juegos</a></li>
+                <a href="consolas.html">Consolas</a></li>
+                <a href="franquicias.html">Franquicias</a></li>
+                <a href="nosotros.html">Sobre Nosotros</a></li>
+            </div>
+        </nav>
+    </header>
 
 
 
